added Remote controls in React context

--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
     document.addEventListener('amazonPlatformReady', function () {
     //API code goes here
       console.log("Now connected to Firetv api")
-      document.addEventListener("pause", function (){ console.log("PRESSED PAUSE")}, false);
-      document.addEventListener("resume", function (){console.log("PRESSED RESUME")}, false);
+      // document.addEventListener("pause", function (){ console.log("PRESSED PAUSE")}, false);
+      // document.addEventListener("resume", function (){console.log("PRESSED RESUME")}, false);
 
-      document.addEventListener("keydown",(e)=>{
-        
-        console.log("DPAD PRESSED",e.code);
-      })
+      // document.addEventListener("keydown",(e)=>{console.log("DPAD PRESSED",e.code);})
   },false);
 
   </script>
